[package]
name = "biosphere"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.7"
scuttle = { git = "https://github.com/Zolmok/scuttle", branch="main" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
sys-info = "0.9"
which = "4.2.2"
