[package]
name = "biosphere"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.37"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sys-info = "0.9"
tempfile = "3.19.1"
which = "7.0.3"
